Added space and broke up intro text for splash page

--- a/src/pages/annie/annie.html
+++ b/src/pages/annie/annie.html
@@ -7,14 +7,15 @@
 </ion-header>
 
 <ion-content padding class="annieClass">
+<br><br><br>
     <div>
         <h1> annie </h1>
     </div> 
     
     <div>
-        Hey there, I'm Annie!
-        I'm here to make news simple for you.
-        I'll break down what's happening and
-        tell you what's new!
+        <p>Hey there, I'm Annie!</p>
+        
+        <p>I'm here to make news simple for you.
+        I'll break down what's happening and tell you what's new!</p>
     </div>    
 </ion-content>
